# ha_addon_scheiber

./: .gitattributes  .gitignore  AGENTS.md  COMMIT_MESSAGE_v3.0.0.txt  IMPLEMENTATION.md  README.md  TASKS.md  V4_TESTING_SUMMARY.md  capture_mqtt_snapshot.py  check_mqtt.py  compare_mqtt_snapshots.py  developer_story.md  list_matchers.py  pyproject.toml  repository.json  scheiber-config.yaml  scheiber.example.yaml  scheiber.yaml  test_check_mqtt_logic.py  test_config_integrity.py  test_debug_logging.py  test_device_structure.py  verify_config.py
.github/: copilot-instructions.md
.github/skills/task-implementation/: SKILL.md
.github/skills/task-planning/: SKILL.md
candump_data/: README.md
candump_data/24h_of_scheiber/: snowdrop_candump_20260308.candump
docs/examples/: scheiber-config.yaml
plan/: README.md  button-interaction-hypothesis.md
plan/tasks/: README.md  bloc9-segment-routing.md  runtime-integration.md
plan/tasks/done/: bloc7-runtime-config.md  bloc7-runtime-grouping.md  bloc7-setup-discovery.md  bloc7-tests-docs.md  bloc9-output-metadata-model.md  bloc9-segment-routing.md  config-compatibility-v620.md  config-editor-api.md  discovery-pipeline.md  frontend-browser-heartbeat.md  frontend-workflow.md  mcp-addon-activation.md  mcp-server-runtime.md  mqtt-discovery-entity-naming.md  scheiber-address-family-model.md  setup-editor-unassigned-output-workflow.md  setup-ui-protocol-discovery.md  sourceselector-ac-monitoring.md  test-strategy.md  web-ui-architecture.md  web-ui-availability.md
scheiber/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  analyser.py  config.yaml  gateway.py  run.sh  scheiber.py  test.txt
scheiber/src/: .gitignore  can-mqtt-bridge  can_decoder.py  config_loader.py  devices.py  easing.py  mqtt_bridge.py  requirements.txt  scheiber-cli  scheiber.py
scheiber/src/archive/: README.md  can_decoder.py  config_loader.py  devices.py  mqtt_bridge.py
scheiber/src/can_mqtt_bridge/: __init__.py  __main__.py  air_switch_button.py  bridge.py  button.py  discovery_name.py  light.py  logical_entity.py  pyproject.toml  sensor.py  switch.py
scheiber/src/can_mqtt_bridge/tests/: README.md  __init__.py  conftest.py  test_air_switch_button.py  test_bridge.py  test_bridge.py.backup  test_retained_messages.py  test_state_flow.py  test_switch_state_confirmation.py
scheiber/src/migrate/: 001_migrate_state_keys_to_entity_id.py  README.md
scheiber/src/scheiber/: README.md  __init__.py  air_switch.py  base_device.py  bloc7.py  bloc9.py  button_discovery.py  can_bus.py  config.py  discovery.py  light.py  matchers.py  output.py  protocol.py  pulse.py  source_selector.py  switch.py  system.py  transitions.py
scheiber/src/scheiber/tests/: __init__.py  conftest.py  test_air_switch.py  test_air_switch_config.py  (+15 more)
scheiber/src/scheiber_web/: __init__.py  __main__.py  app.py  bloc7_candidates.py  config_ops.py  discovery.py  frontend_heartbeat.py  inspector.py  interactions.py  mcp.py  runtime.py  setup_helper.py
scheiber/src/tools/: analyser.md  analyser.py  analyze_0x02040588.py  analyze_air_switch_log.py  analyze_bloc7.py  analyze_dimming.py  bloc9_status.py  canlistener.py  light.py  silent.sh  start.sh
scheiber/tools/: REFACTORING.md  analyser.md  analyser.py  analyze_dimming.py  can_names.csv  canlistener.py  device_types.yaml  devices.py  light.py  mqtt_bridge.py  requirements.txt  scheiber.md  scheiber.py  start.sh  start_block9.sh
scheiber/tools/data/: change_dump_staircase_light.md  command.md  generator.md  panel_direct.md
tests/: test_brightness_command.py  test_can_messages.py  test_data_dir.py  test_dimming_threshold.py  test_easing.py  test_mqtt_bridge.py  test_threshold_crossing_echo.py  test_transition_cancellation.py
tools/: .copilot_project.json  analyser.md  analyser.py  can_names.csv  change_dump_staircase_light.md  push_light_button.md  scheiber.py  working_light.md
tools/data/: underwater_light.md
(+21 files in other folders)
